tests/spec/emit/snapshots/tuple_struct_refutable_field_pattern_keeps_literal_test.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct MP(int, string)
  
  fn test(p: MP) -> int {
    match p {
      MP(0, _) => 1,
      MP(n, _) => n,
    }
  }
---
package main

type MP struct {
	F0 int
	F1 string
}

func test(p MP) int {
	if p.F0 == 0 {
		return 1
	}
	return p.F0
}
