tests/spec/emit/snapshots/tuple_struct_single_field_access.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct UserId(int)\n\nfn test(id: UserId) -> int {\n  id.0\n}\n"
---
package main

type UserId int

func test(id UserId) int {
	return int(id)
}
