tests/spec/emit/snapshots/tuple_struct_single_field_construction.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct UserId(int)\n\nfn test() -> UserId {\n  UserId(42)\n}\n"
---
package main

type UserId int

func test() UserId {
	return UserId(42)
}
