tests/spec/emit/snapshots/tuple_struct_single_field_def.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct UserId(int)\n"
---
package main

type UserId int
