tests/spec/emit/snapshots/tuple_struct_user_pascal_string_method_suppresses_auto_stringer.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct UserId(int)
  
  impl UserId {
    fn String(self) -> string {
      "custom"
    }
  }
  
  fn main() {
    let u = UserId(1)
    let _ = u
  }
---
package main

type UserId int

func (u UserId) String() string {
	return "custom"
}

func main() {
	u := UserId(1)
	_ = u
}
