tests/spec/emit/snapshots/tuple_struct_user_string_method_emits_go_string.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct UserId(int)
  
  impl UserId {
    pub fn string(self) -> string {
      "custom"
    }
  }
  
  fn main() {
    let u = UserId(1)
    let _ = u
  }
---
package main

type UserId int

func (u UserId) String() string {
	return "custom"
}

func main() {
	u := UserId(1)
	_ = u
}
