tests/spec/emit/snapshots/tuple_struct_zero_field.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct Marker()\n\nfn test() -> Marker {\n  Marker()\n}\n"
---
package main

type Marker struct{}

func test() Marker {
	return Marker{}
}
