tests/spec/emit/snapshots/tuple_subject_bound_whole_keeps_its_tuple.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test(a: int, b: int) -> int {
    match (a, b) {
      pair => pair.0 + pair.1,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(a, b int) int {
	subject := lisette.MakeTuple2[int, int](a, b)
	{
		pair := subject
		return pair.First + pair.Second
	}
}
