tests/spec/emit/snapshots/tuple_subject_of_calls_reads_each_once.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn left() -> int { 1 }
  
  fn right() -> int { 2 }
  
  fn test() -> string {
    match (left(), right()) {
      (1, 2) => "one two",
      _ => "other",
    }
  }
---
package main

func left() int {
	return 1
}

func right() int {
	return 2
}

func test() string {
	arg := left()
	arg_1 := right()
	if arg == 1 && arg_1 == 2 {
		return "one two"
	}
	return "other"
}
