tests/spec/emit/snapshots/tuple_subject_or_arm_reading_different_elements_keeps_its_tuple.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn left() -> int { 2 }
  
  fn right() -> int { 1 }
  
  fn test() -> string {
    match (left(), right()) {
      (_, 1) | (2, _) => "hit",
      _ => "miss",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func left() int {
	return 2
}

func right() int {
	return 1
}

func test() string {
	subject := lisette.MakeTuple2[int, int](left(), right())
	if subject.Second == 1 || subject.First == 2 {
		return "hit"
	}
	return "miss"
}
